# senakitours

./: README.md  pyproject.toml
senaki_tours/: hooks.py  install.py
senaki_tours/api/: tourist.py
senaki_tours/public/css/: tours.css
senaki_tours/public/js/: tours.js
senaki_tours/tours/: __init__.py
senaki_tours/tours/doctype/tourist_category/: __init__.py  tourist_category.json  tourist_category.py
senaki_tours/tours/doctype/tourist_object/: __init__.py  tourist_object.json  tourist_object.py
senaki_tours/tours/doctype/tourist_object_image/: __init__.py  tourist_object_image.json  tourist_object_image.py
senaki_tours/tours/doctype/tourist_route/: __init__.py  tourist_route.json  tourist_route.py
senaki_tours/www/: tours.html  tours.py
