[project]
name = "senaki_tours"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Senaki Municipality Digital Tourist Guide"
authors = [{ name = "Senaki Municipality" }]
license = { text = "MIT" }
readme = "README.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
